--- a/docs/assets/extra.css
+++ b/docs/assets/extra.css
@@ -28,6 +28,7 @@
     --font-family-sans-serif: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     --font-family-monospace: SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace;
 
+    --devcenter-bg: #304250;
     --ocean: #007AB8;
     --light-gray: #f7f7f7;
     --darkmode: #1e2a31;
@@ -40,5 +41,11 @@
     --black: #000;
 
     --md-primary-fg-color: var(--ocean);
-    --md-accent-fg-color: var(--ocean);
+    --md-accent-fg-color: var(--hoveerblue);
+}
+
+[data-md-color-scheme="slate"] {
+    --md-hue: 200; 
+    --md-primary-fg-color: var(--devcenter-bg);
+    --md-accent-fg-color: var(--leaf);
 }
